feat: Add route for map
